src/objects/Process_Vendor_Location_Association__c.object
<CustomObject>
    <fields>
        <fullName>Criticality__c</fullName>
        <label>Criticality</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <label>Process</label>
        <referenceTo>Process__c</referenceTo>
        <relationshipLabel>Process/Vendor Location Associations</relationshipLabel>
        <relationshipName>Process_Vendor_Location_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Vendor_Location__c</fullName>
        <label>Vendor Location</label>
        <referenceTo>Vendor_Location__c</referenceTo>
        <relationshipLabel>Process/Vendor Location Associations</relationshipLabel>
        <relationshipName>Process_Vendor_Location_Associations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Process/Vendor Location Association</label>
    <nameField>
        <displayFormat>PRCVLA{000000}</displayFormat>
        <label>Process/Vendor Location Association</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Process/Vendor Location Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>